Try to fix form submission + styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
           <div class="columns">
             <div class="column is-8-desktop is-offset-2-desktop has-text-centered">
-              <h1 class="title is-2 is-spaced">
+              <h1 class="heading title is-2 is-spaced">
                 Jacky and Sadhana are getting married!
               </h1>
               <h2 class="subtitle is-4">
@@ -29,15 +29,19 @@
         <div class="columns">
           <div class="column is-8-desktop is-offset-2-desktop">
             <div class="content">
-              <h3>Venue</h3>
+              <h3 class="heading">Venue</h3>
               <h5>Sorrento in the Park, Cornwall Park </h5>
               <h5>670 Manukau Rd, Royal Oak, Auckland 1023</h5>
               <h6>Saturday August 31st</h6>
               <h6>Please be seated for the ceremony by 03.15pm</h6>
               <h6>Reception to follow after</h6>
+
               <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJz6XbcaJIDW0RQBpwF2akc9k&key=AIzaSyDnsHEzFvjPjlr6xtjQ4zsAewD45lkYXpI" allowfullscreen></iframe>
-              <h3>RSVP</h3>
-              <form id="rsvp-form" name="RSVP" netlify>
+
+              <hr class="hr" />
+
+              <h3 class="heading">RSVP</h3>
+              <form id="rsvp-form" name="RSVP" method="POST" data-netlify="true">
                 <div class="field">
                   <label class="label">Name</label>
                   <div class="control">
@@ -68,11 +72,19 @@
                 </div>
               </form>
 
-              <h3>How We Met</h3>
-              <h3>Engagement</h3>
+              <hr class="hr" />
+              <h3 class="heading">How We Met</h3>
+              <p>
+                Once upon a time...
+              </p>
+              <hr class="hr" />
+              <h3 class="heading">Engagement</h3>
+              <p>
+                A story with fried rice.
+              </p>
             </div>
             <div class="content">
-          </div>
+            </div>
           </div>
         </div>
       </div>
