Implement modal + fix babel and add css minifier

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="highest">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+
     <section class="hero is-medium is-primary us">
       <div class="hero-body">
         <div class="container">
@@ -24,6 +25,7 @@
         </div>
       </div>
     </section>
+
     <section class="section">
       <div class="container">
         <div class="columns">
@@ -89,6 +91,22 @@
         </div>
       </div>
     </section>
+
+    <div class="modal" id="modal">
+      <div id="modal-background" class="modal-background"></div>
+      <div class="modal-content">
+        <article class="message is-success">
+          <div class="message-header">
+            <p class="has-text-centered">Success</p>
+          </div>
+          <div class="message-body has-text-justified">
+            Wow that actually worked... I mean of course it did, Jacky is a great programmer! Thank you very much for taking the time to RSVP. We very much look forward having a good time with you at our wedding :)
+          </div>
+        </article>
+      </div>
+      <button id="close-modal" class="modal-close is-large" aria-label="close"></button>
+    </div>
+
     <footer class="footer has-text-centered">
       <div class="container">
         <div class="columns">
