fix form submit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="has-navbar-fixed-top">
+<html id="highest" class="has-navbar-fixed-top">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,7 +18,7 @@
             <p class="has-text-centered">Success</p>
           </div>
           <div class="message-body has-text-justified">
-            Wow that actually worked... I mean of course it did, Jacky is a great programmer! Thank you for taking the time to RSVP. We look forward having a swell time with you at our wedding :)
+            Wow that actually worked... I mean of course it did, Jacky is a great programmer! Thank you for taking the time to RSVP. We look forward to having a swell time with you at our wedding :)
           </div>
         </article>
       </div>
@@ -186,13 +186,13 @@
                 <div class="field">
                   <label class="label">Would you like to share any pearls of wisdom for the soon-to-be newlyweds?</label>
                   <div class="control">
-                    <textarea class="textarea has-fixed-size" id="advice" name="guests" placeholder="e.g. Always listen to Jacky..."></textarea>
+                    <textarea class="textarea has-fixed-size" id="advice" name="advice" placeholder="e.g. Always listen to Jacky..."></textarea>
                   </div>
                 </div>
                 <div class="field">
                   <label class="label">What's your favourite part during weddings?</label>
                   <div class="control">
-                    <textarea class="textarea has-fixed-size" id="favourite" name="guests" placeholder="e.g. The food..."></textarea>
+                    <textarea class="textarea has-fixed-size" id="favourite" name="favourite" placeholder="e.g. The food..."></textarea>
                   </div>
                 </div>
                 <div class="field">
