squash last layout centering bug

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>S&J</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="shortcut icon" type="image/png" href="static/favicon.png" />
-
   </head>
   <body>
     <div class="modal" id="modal">
@@ -33,7 +32,7 @@
           <span class="small-logo">J</span>
         </a>
 
-        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false">
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
@@ -82,19 +81,12 @@
             <div class="column"> </div>
           </div>
         </div>
-        <!-- <div class="container has-text-centered">
-             <h1 class="heading title logo">
-             <span>Sadhana</span>
-             <img src="static/wedding-ring.svg" width="70" height="70" class="big-icon" />
-             <span>Jacky</span>
-             </h1>
-             </div> -->
       </div>
     </section>
 
     <section class="section" id="marriage">
-      <div class="container intro has-text-centered">
-        <div class="content">
+      <div class="container intro">
+        <div class="content has-text-centered intro">
           <h3 class="heading is-size-3">Sadhana and Jacky are getting married...</h3>
           <p class="is-size-5">
             On the 31st of August, and they would love for you to come celebrate with them!
@@ -104,7 +96,7 @@
       <div class="container">
         <div class="container about">
           <div class="tile is-ancestor">
-            <div class="tile is-4 is-parent">
+            <div class="tile is-3 is-parent">
               <div class="tile is-child has-text-centered">
                 <figure class="image is-square">
                   <img class="is-rounded" src="static/sadhana.jpg" />
@@ -113,20 +105,22 @@
                 <p>Sadhana Chandra Mohan</p>
               </div>
             </div>
-            <div class="tile is-4 is-parent">
+            <div class="tile is-parent">
               <div class="tile is-child has-text-justified">
                 <article>
-                  <h4 class="heading is-size-4 has-text-centered lower-heading">The Bride and Groom</h4>
+                  <h4 class="heading is-size-3 has-text-centered lower-heading">The Bride and Groom</h4>
 
                   <p>Sadhana and Jacky were supposed to have first met in primary school. Unfortunately, a few months prior to Jacky starting in what would have been the same year and class, Sadhana had left with her family to America.</p>
+                  <br/>
 
                   <p>The destiny of love could not be stopped however, as fate bought her back to Auckland to attend the same highschool a few years later. Destiny gave their love a second chance to blossom; it could not be stopped... except by akward teenage social behavior. Sadhana and Jacky went through 5 years of high school together, sharing classes and having mutual friends, but barely exchanging any words. </p>
+                  <br/>
 
                   <p>This seemed like a difficult case for Cupid to tackle, but the god of love did not give up. It waited until university to strike the couple with true love's arrow. It was during this often stressful and trying time as students that they were able to find and support each other, allowing a loving bond to bloom. Since then they have continued to support each other through good times and bad times. Now they are ready to take the next step and get hitched!</p>
                 </article>
               </div>
             </div>
-            <div class="tile is-4 is-parent">
+            <div class="tile is-3 is-parent">
               <div class="tile is-child  has-text-centered">
                 <figure class="image is-square">
                   <img class="is-rounded" src="static/jacky.jpg" />
@@ -284,7 +278,6 @@
         </div>
       </div>
     </footer>
-
     <script type="text/javascript" src="lib/main.js"></script>
   </body>
 </html>
