--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
           <span class="small-logo">J</span>
         </a>
 
-        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false">
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" id="burger">
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
         </a>
       </div>
 
-      <div class="navbar-menu">
+      <div class="navbar-menu" id="menu">
         <div class="navbar-start">
           <a class="navbar-item" href="#marriage">
             Marriage
